Pressed the space bar

--- a/lab3/lab3.tex
+++ b/lab3/lab3.tex
@@ -19,7 +19,7 @@
 \newcommand{\documentTitle}{Lab 3 - Basic Circuits}
 \newcommand{\documentAuthor}{Andrew Pham, Aneel Damaraju}
 \newcommand{\courseTitle}{ELEC 240}
-\newcommand{\testDate}{September 19,2018}
+\newcommand{\testDate}{September 19, 2018}
 \newcommand{\reportDate}{September 26, 2018}
 
 \geometry{margin=1in}
@@ -137,14 +137,10 @@ To measure the transfer function at a given frequency, we needed to measure both
 	It seems that the appropriate frequency for the DMM is 50-500 Hz to be safe, but more reasonably 10Hz-1kHz.
 \subsubsection{Part B}
 	 The voltage divider ratio should be $\frac{10}{10+10} = \frac{1}{2} V_{in}$  for two \SI{10}{\kilo\ohm} Resistors in series. For the sine wave, the output is $.351 V_{ac}$, which is 49\% of the initial Voltage, consistent with the voltage divider equation 
-	 At 47 Ohms the $V_{out} = .243$, which is inconsistent, with the voltage divider equation, indicating that the voltmeter may have inconsistent readings at low voltages. 
-	 At 1 MOhms the output voltage is .335, indicating that there may be a range of acceptable resistance for the voltmeter, just like we noted an acceptable frequency range. \\\\
-	Using the same sine wave, but wih 100 Hz, the potentiometer is connected in series and the voltage drop across it is recorded. At the midpoint, $V_{out} = .386 or .55 V_{in}$ this value is reasonable within error for such an analog device. 
-	 The voltage divider ratio should be $\frac{10}{(10+10)}$  for two 10 kOhm Resistors in series. For the sine wave, the output is $.351 V_{AC}$, which is 49\% of the initial Voltage, consistent with the voltage divider equation 
-	 At 47 Ohms the $V_{OUT} = .243$, which is inconsistent, with the voltage divider equation, indicating that the voltmeter may have inconsistent readings at low voltages. 
-	 At 1MOhm the output voltage is .335, indicating that there may be a range of acceptable resistance for the voltmeter, just like we noted an acceptable frequency range.
+	 At \SI{47}{\ohm} the $V_{out} = .243$, which is inconsistent, with the voltage divider equation, indicating that the voltmeter may have inconsistent readings at low voltages. 
+	 At \SI{1}{\mega\ohm} the output voltage is .335, indicating that there may be a range of acceptable resistance for the voltmeter, just like we noted an acceptable frequency range. \\\\
 \subsubsection{Part C} 
-	Using the same sine wave, but wih 100 Hz, the potentiometer is connected in series and the voltage drop across it is recorded. At the midpoint, $V_{OUT} = .386 or .55 V_{IN}$ this value is reasonable within error for such an analog device. 
+	Using the same sine wave, but wih 100 Hz, the potentiometer is connected in series and the voltage drop across it is recorded. At the midpoint, $V_{OUT} = .386$ or $.55 V_{IN}$ this value is reasonable within error for such an analog device. 
 	The values of the output voltage at different divisions are given below.
 \begin{table}[H]
 	\begin{center}
