halfway through testdescription

--- a/lab5/lab5report.tex
+++ b/lab5/lab5report.tex
@@ -52,25 +52,42 @@
 
 \section{Objective}
 
-Your text here
+The first objective of this lab was to learn how to generate a virtual signal with LabView and vary the signal's parameters. The second objective of the lab was to learn how to acquire a signal in LabView from an external source like our VirtualBench function generator and then perform frequency analysis on the acquired signal. The third and final objective of the lab was to modify the circuit from Lab 4 so that we could perform speech analysis as well as analyze an unknown signal. 
 
 \medskip
 
-\textit{Note (To be deleted): Think of this test report as a document with your peers as your readers. This means you can assume a similar knowledge background as you. Your readers should be able to easily understand what is going on, and also be able to repeat your lab results based on your document and all references you cite.}
+%\textit{Note (To be deleted): Think of this test report as a document with your peers as your readers. This means you can assume a similar knowledge background as you. Your readers should be able to easily understand what is going on, and also be able to repeat your lab results based on your document and all references you cite.}
 
-\textit{For the Objective section, identify the test you performed and its objectives. The objectives of the test are important to state because they are usually analyzed in the conclusion to determine whether the test succeeded.}
+%\textit{For the Objective section, identify the test you performed and its objectives. The objectives of the test are important to state because they are usually analyzed in the conclusion to determine whether the test succeeded.}
 
 \section{Materials}
 
-Your text here
+\begin{itemize}
+	\item Virtual Bench (Software, Oscilloscope, Function Generator, DC Power Supply)
+	\item LabView
+	\item BNC Male to Clips cord
+	\item BNC T connector
+	\item Oscilloscope Probe
+	\item Breadboard (with setup from Lab 4
+	\item 2 10 cm length wires (with 6 mm stripped on each end)
+	\item Digital Multimeter
+	\item 2.2 $k\Omega$ resistor
+	\item 033 $\mu F$ capacitor
+	\item Telephone handset
+	\item Dynamic microphone
+	\item Smartphone (or some device to play audio from a speaker)
+	
+\end{itemize}
 
 \medskip
 
-\textit{Note (To be deleted): Provide a bullet point list of components, software tools, and hardware (such as the NI VirtualBench or DMM) used during the lab}
+%\textit{Note (To be deleted): Provide a bullet point list of components, software tools, and hardware (such as the NI VirtualBench or DMM) used during the lab}
 
 \section{Test Description}
 
-Your text here
+In Experiment 5.1, Part A, we focused on generating a signal in Labview by configuring circuit components on the block diagram pane in Labview. Once we created a configuration to generate a circuit, we created a spectrum analyzer in Part B by adding a Fast Fourier Transformer to the configuration and observed how varying the parameters of both the signal and measurement tools could affect the power spectrum graph. 
+
+In Experiment 5.2, Part B, we acquired a signal from the NI VirtualBench by connecting the Data Acquisition Card (DAQ) within the PC running the LabView software via a DAQ cable. In this step, we also had to modify the previous configuration from Experiment 5.1 so that the circuit would accept an external signal. 
 
 \medskip
 
